<resources>
    <string name="app_name">ProjetoFinal</string>
    <string name="nome">Nome</string>
    <string name="plataforma">Plataforma</string>
    <string name="estado">Estado</string>
    <string name="preco">Preço</string>
    <string name="em_andamento">Em andamento</string>
    <string name="finalizado">Finalizado</string>
    <string name="nao_comecado">Não começado</string>
    <string name="alterar_jogo">Alterar Jogo</string>
    <string name="novo_jogo">Novo jogo</string>
    <string name="aviso">Aviso</string>
    <string name="ok">OK</string>
    <string name="confirmacao">Confirmação</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="nome_vazio">O nome está vazio!</string>
    <string name="preco_vazio">O preço está vazio!</string>
    <string name="preco_invalido">O preço deve ser maior que 0!</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="deseja_realmente_apagar">Deseja realmente apagar?</string>
    <string name="novo">Novo</string>
    <string name="estados">Estados</string>
    <string name="plataformas">Plataformas</string>
    <string name="abrir">Abrir</string>
    <string name="apagar">Apagar</string>
    <string name="estado_usado">O estado está sendo usado e não pode ser apagado!</string>
    <string name="alterar_estado">Alterar Estado</string>
    <string name="novo_estado">Novo Estado</string>
    <string name="nome_usado">O estado esta sendo usado e não pode ser apagado!</string>
    <string name="plataforma_usada">A plataforma está sendo usada e não pode ser apagada!</string>
    <string name="alterar_plataforma">Alterar Plataforma</string>
    <string name="nova_plataforma">Nova Plataforma</string>
    <string name="plataforma_vazia">O nome da plataforma está vazio!</string>
    <string name="autor">Autor</string>
    <string name="jose_ede">José Ede de Campos Neto</string>
    <string name="curso">Curso</string>
    <string name="eng_software">Engenharia de Softare</string>
    <string name="sobre_aplicativo">Aplicativo para Coleção de Jogos</string>
    <string name="sobre">Sobre</string>
    <string name="estado_vazio">Selecione um estado!</string>
    <string name="cores">Cores</string>
    <string name="azul">Azul</string>
    <string name="vermelho">Vermelho</string>
    <string name="verde">Verde</string>
    <string name="preferencias">Preferências</string>
    <string name="midia">Mídia</string>
    <string name="fisica">Física</string>
    <string name="digital">Digital</string>
    <string name="midia_vazia">Selecione uma mídia</string>
</resources>
